<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_main_account_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_header"
        layout="@layout/layout_header" />

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/header_bold"
        android:gravity="center"
        android:text="@string/account_detail_header"
        android:textColor="@color/regi_header_color" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/account_detail_subtitle"
        android:textColor="@color/regi_header_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edt_back"
            android:fontFamily="@font/pingmedium"
            android:hint="@string/edt_hint_first_name"
            android:lines="1"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:maxLength="50"
            android:textColor="@color/edt_text_color"
            android:textColorHint="@color/edt_hint_color" />

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/edt_last_name"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edt_back"
            android:fontFamily="@font/pingmedium"
            android:hint="@string/edt_hint_last_name"
            android:lines="1"
            android:maxLength="50"
            android:textColor="@color/edt_text_color"
            android:textColorHint="@color/edt_hint_color" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/button_color">

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pingmedium"
            android:gravity="center"
            android:text="@string/register_header_title"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"></TextView>

    </androidx.cardview.widget.CardView>

</LinearLayout>