<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/lyt_main_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_header"
            layout="@layout/layout_header" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/login_logo" />

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/header_bold"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/header_color" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/register_subtitle"
            android:textColor="@color/header_color" />


        <LinearLayout
            android:id="@+id/lyut_email_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lyt_phone_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/phone_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/button_color"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/txt_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/pingmedium"
                        android:gravity="center"
                        android:text="@string/register_phone"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/email_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/button_color"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/pingmedium"
                        android:gravity="center"
                        android:text="@string/register_email"
                        android:textColor="@color/register_tab_text" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_enter_phone_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/phone_back"
                app:cardElevation="0dp">

                <LinearLayout
                    android:id="@+id/lyt_enter_phone_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:ccp_autoDetectCountry="false"
                        app:ccp_defaultNameCode="OM"
                        app:ccp_showFlag="false"
                        app:ccp_showFullName="false"
                        app:ccp_showNameCode="false"></com.hbb20.CountryCodePicker>

                    <EditText
                        android:id="@+id/edt_email_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/pingmedium"
                        android:hint="@string/phone_hint"
                        android:imeOptions="actionDone"
                        android:textColor="@color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_resend_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/login_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/login_signup_word"
                android:textColor="@color/resend" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/button_color"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/btn_send_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:fontFamily="@font/pingmedium"
                android:gravity="center"
                android:text="@string/register_send_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"></TextView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <include
        android:id="@+id/custom_loader"
        layout="@layout/loader_layout"
        android:visibility="gone" />
</RelativeLayout>